Adding domain and pagination in notes APIs
